DE29150-fix the username top text gets cut off

--- a/sass/navigation/personal-menu.scss
+++ b/sass/navigation/personal-menu.scss
@@ -26,6 +26,7 @@
 	margin-left: 10px;
 	max-width: 200px;
 	min-width: 40px;
+	line-height: 1.6;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
@@ -83,5 +84,4 @@
 
 .d2l-navigation-s-personal-menu-description {
 	font-size: 0.6rem;
-	margin-top: 5px;
 }
